src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: white;
  font-family: Oswald, sans-serif;
}
#root {
  display: flex;
  flex-direction: column;
  background-color: #0a2027;
}

.loader-container {
  height: 100vh;
}
.App {
  height: 100%;
  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.548);
  background-color: #0a2027;
}

.movie-details {
  background: #000000c5;
  flex-direction: column;
  margin: 0 auto;
  width: 70%;
  max-width: 800px;
}

.poster {
  width: 100%;
}

.poster img {
  object-fit: cover;
  width: 100%;
}

.movie-info {
  padding: 0 15px;
}

.movie-info h1 {
  font-size: 40px;
}

.movie-info p {
  line-height: 20px;
  width: 100%;
}
.genres {
  margin: 20px 0;
  width: 80%;
}

.headlines {
  color: #00fc87;
  font-size: 18px;
  margin: 20px 0;
}

.release-details {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.release-info .headlines {
  font-size: 25px;
}

.release-info p {
  font-size: 16px;
}

.search-section {
  text-align: center;
  margin: 10px auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

@media all and (min-width: 700px) {
  .search-section {
    flex-direction: row;
    width: 700px;
  }
  .App {
    height: 100vh;
  }
  .movie-details {
    display: flex;
    justify-content: space-evenly;
    flex-direction: row-reverse;
    width: 50%;
    min-width: 700px;
    margin: 20px auto;
  }

  .poster {
    width: 100%;
    min-width: 300px;
    height: 100%;
  }
  .poster img {
    width: 100%;
    height: 100%;
  }

  .movie-info {
    width: 100%;
    min-width: 300px;
  }
  .release-details {
    width: 90%;
  }
}

/* FORM  */
form {
  text-align: center;
  position: relative;
}

input {
  color: white;
  margin-top: 20px;
  background-color: transparent;
  outline: none;
  border: none;
  font-size: 20px;
  border-bottom: 1px solid white;
  width: 350px;
  padding-left: 5px;
  padding-bottom: 5px;
}

input::placeholder {
  color: rgb(177, 173, 173);
}

form ul {
  background-color: rgba(0, 0, 0, 0.562);
  width: 350px;
  position: absolute;
  width: 350px;
  right: 50%;
  transform: translate(50%, 0%);
  margin: 0 auto;
}

.logo {
  width: 100%;
  align-self: center;
  max-width: 140px;
  margin-bottom: 25px;
  display: block;
}

form ul li {
  list-style: none;
  color: white;
  text-align: left;
  padding: 10px;
  border-bottom: 1px solid black;
}

form ul li:hover,
form ul li:focus {
  background-color: #00fc87;
  color: black;
  cursor: pointer;
}

/* spinner  */
.loader {
  border: 16px solid #f3f3f3; /* Light grey */
  border-top: 16px solid #3498db; /* Blue */
  border-radius: 50%;
  width: 220px;
  height: 220px;
  animation: spin 2s linear infinite;
  margin: 20% auto;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

